bin_PROGRAMS=source-browser
check_PROGRAMS=test-async-io

source_browser_SOURCES=\
	sb-marshallers.c \
	sb-marshallers.h \
	gobject-helpers.h \
	sb-annotations.c \
	sb-annotations.h \
	sb-async-reader.c \
	sb-async-reader.h \
	sb-comparable.c \
	sb-comparable.h \
	sb-contributor.c \
	sb-contributor.h \
	sb-display.c \
	sb-display.h \
	sb-main.c \
	sb-progress.c \
	sb-progress.h \
	sb-reference.c \
	sb-reference.h \
	sb-reference-label.c \
	sb-reference-label.h \
	sb-revision.c \
	sb-revision.h \
	sb-window.c \
	sb-window.h \
	$(NULL)
AM_CPPFLAGS=$(SB_CFLAGS)
LDADD=$(SB_LIBS)

